starstream-to-wasm/tests/snapshots/inputs@if_elseif_else.star.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/if_elseif_else.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Function(
                FunctionDef {
                    export: Some(
                        Script,
                    ),
                    name: Identifier {
                        name: "main",
                        span: 10..14,
                    },
                    params: [],
                    return_type: None,
                    body: Block {
                        statements: [],
                        tail_expression: Some(
                            Spanned {
                                node: If {
                                    branches: [
                                        (
                                            Bool(
                                                Spanned {
                                                    node: Literal(
                                                        Boolean(
                                                            false,
                                                        ),
                                                    ),
                                                    span: 27..32,
                                                },
                                            ),
                                            Block {
                                                statements: [
                                                    Spanned {
                                                        node: Expression(
                                                            Spanned {
                                                                node: Literal(
                                                                    Integer(
                                                                        IntegerLiteral {
                                                                            digits: "1",
                                                                            radix: Decimal,
                                                                        },
                                                                    ),
                                                                ),
                                                                span: 44..45,
                                                            },
                                                        ),
                                                        span: 44..51,
                                                    },
                                                ],
                                                tail_expression: None,
                                                span: 34..53,
                                            },
                                        ),
                                        (
                                            Bool(
                                                Spanned {
                                                    node: Literal(
                                                        Boolean(
                                                            true,
                                                        ),
                                                    ),
                                                    span: 62..66,
                                                },
                                            ),
                                            Block {
                                                statements: [
                                                    Spanned {
                                                        node: Expression(
                                                            Spanned {
                                                                node: Literal(
                                                                    Integer(
                                                                        IntegerLiteral {
                                                                            digits: "2",
                                                                            radix: Decimal,
                                                                        },
                                                                    ),
                                                                ),
                                                                span: 78..79,
                                                            },
                                                        ),
                                                        span: 78..85,
                                                    },
                                                ],
                                                tail_expression: None,
                                                span: 68..87,
                                            },
                                        ),
                                    ],
                                    else_branch: Some(
                                        Block {
                                            statements: [
                                                Spanned {
                                                    node: Expression(
                                                        Spanned {
                                                            node: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        digits: "3",
                                                                        radix: Decimal,
                                                                    },
                                                                ),
                                                            ),
                                                            span: 102..103,
                                                        },
                                                    ),
                                                    span: 102..109,
                                                },
                                            ],
                                            tail_expression: None,
                                            span: 92..111,
                                        },
                                    ),
                                },
                                span: 23..111,
                            },
                        ),
                        span: 17..113,
                    },
                },
            ),
            span: 0..113,
        },
    ],
}

==== Inference trace ====
T-Fn: main => ()
  T-ReturnTail: if (false) {
    1;
} else if (true) {
    2;
} else {
    3;
} => ()
    T-If: {main: fn() -> ()} ⊢ if (false) {
    1;
} else if (true) {
    2;
} else {
    3;
} ⇒ ()
      T-Bool: {main: fn() -> ()} ⊢ false ⇒ bool
      Check-Bool: bool => ok
      T-Expr: {main: fn() -> ()} ⊢ 1; ⇒ ()
        T-Int: {main: fn() -> ()} ⊢ 1 ⇒ i64
      T-Bool: {main: fn() -> ()} ⊢ true ⇒ bool
      Check-Bool: bool => ok
      T-Expr: {main: fn() -> ()} ⊢ 2; ⇒ ()
        T-Int: {main: fn() -> ()} ⊢ 2 ⇒ i64
      Unify-Const: () ~ () => {}
      T-Expr: {main: fn() -> ()} ⊢ 3; ⇒ ()
        T-Int: {main: fn() -> ()} ⊢ 3 ⇒ i64
      Unify-Const: () ~ () => {}
    Unify-Const: () ~ () => {}

==== Typed AST ====
TypedProgram {
    definitions: [
        Function(
            TypedFunctionDef {
                export: Some(
                    Script,
                ),
                name: Identifier {
                    name: "main",
                    span: 10..14,
                },
                id: NameId(4),
                ty: FunctionType {
                    kind: Normal,
                    name_span: 10..14,
                    params: [],
                    result: Unit,
                    callee: Some(
                        Named(
                            NameId(4),
                        ),
                    ),
                },
                body: TypedBlock {
                    statements: [],
                    tail_expression: Some(
                        Spanned {
                            node: TypedExpr {
                                ty: Unit,
                                kind: If {
                                    branches: [
                                        (
                                            Bool(
                                                Spanned {
                                                    node: TypedExpr {
                                                        ty: Bool,
                                                        kind: Literal(
                                                            Boolean(
                                                                false,
                                                            ),
                                                        ),
                                                    },
                                                    span: 27..32,
                                                },
                                            ),
                                            TypedBlock {
                                                statements: [
                                                    Expression(
                                                        Spanned {
                                                            node: TypedExpr {
                                                                ty: Int(
                                                                    I64,
                                                                ),
                                                                kind: Literal(
                                                                    Integer(
                                                                        IntegerLiteral {
                                                                            digits: "1",
                                                                            radix: Decimal,
                                                                        },
                                                                    ),
                                                                ),
                                                            },
                                                            span: 44..45,
                                                        },
                                                    ),
                                                ],
                                                tail_expression: None,
                                            },
                                        ),
                                        (
                                            Bool(
                                                Spanned {
                                                    node: TypedExpr {
                                                        ty: Bool,
                                                        kind: Literal(
                                                            Boolean(
                                                                true,
                                                            ),
                                                        ),
                                                    },
                                                    span: 62..66,
                                                },
                                            ),
                                            TypedBlock {
                                                statements: [
                                                    Expression(
                                                        Spanned {
                                                            node: TypedExpr {
                                                                ty: Int(
                                                                    I64,
                                                                ),
                                                                kind: Literal(
                                                                    Integer(
                                                                        IntegerLiteral {
                                                                            digits: "2",
                                                                            radix: Decimal,
                                                                        },
                                                                    ),
                                                                ),
                                                            },
                                                            span: 78..79,
                                                        },
                                                    ),
                                                ],
                                                tail_expression: None,
                                            },
                                        ),
                                    ],
                                    else_branch: Some(
                                        TypedBlock {
                                            statements: [
                                                Expression(
                                                    Spanned {
                                                        node: TypedExpr {
                                                            ty: Int(
                                                                I64,
                                                            ),
                                                            kind: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        digits: "3",
                                                                        radix: Decimal,
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                        span: 102..103,
                                                    },
                                                ),
                                            ],
                                            tail_expression: None,
                                        },
                                    ),
                                },
                            },
                            span: 23..111,
                        },
                    ),
                },
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i64 i64 i64 i64) (result i32)))
  (type (;2;) (func))
  (import "starstream:std/builtin" "[resource-drop]utxo" (func (;0;) (type 0)))
  (import "starstream:std/builtin" "[method]utxo.has-method" (func (;1;) (type 1)))
  (import "starstream:std/builtin" "[resource-drop]token" (func (;2;) (type 0)))
  (export "main" (func 3))
  (func (;3;) (type 2)
    (block ;; label = @1
      (block ;; label = @2
        (br_if 0 (;@2;)
          (i32.const 0))
        (block ;; label = @3
          (br_if 0 (;@3;)
            (i32.const 1))
          (br 2 (;@1;)))
        (br 1 (;@1;))))
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (tuple u64 u64 u64 u64))
                  (type (;4;) (func (param "self" 1) (param "hash" 3) (result bool)))
                  (export (;0;) "[method]utxo.has-method" (func (type 4)))
                  (export (;5;) "token" (type (sub resource)))
                  (type (;6;) (borrow 5))
                  (type (;7;) (own 5))
                )
              )
              (import "starstream:std/builtin" (instance (;0;) (type 0)))
              (alias export 0 "utxo" (type (;1;)))
              (import "s-utxo" (type (;2;) (eq 1)))
              (type (;3;) (borrow 2))
              (type (;4;) (own 2))
              (alias export 0 "token" (type (;5;)))
              (import "s-token" (type (;6;) (eq 5)))
              (type (;7;) (borrow 6))
              (type (;8;) (own 6))
              (type (;9;) (func))
              (export (;0;) "main" (func (type 9)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import starstream:std/builtin;
  use starstream:std/builtin.{utxo as s-utxo, token as s-token};

  export main: func();
}
package starstream:std {
  interface builtin {
    resource utxo {
      has-method: func(hash: tuple<u64, u64, u64, u64>) -> bool;
    }

    resource token;
  }
}
