starstream-to-wasm/tests/snapshots/inputs@let_else.star.snap
---
source: starstream-to-wasm/tests/snapshots.rs
input_file: starstream-to-wasm/tests/inputs/let_else.star
---
==== AST ====
Program {
    shebang: None,
    definitions: [
        Spanned {
            node: Function(
                FunctionDef {
                    export: Some(
                        Script,
                    ),
                    name: Identifier {
                        name: "unwrap_or_zero",
                        span: 10..24,
                    },
                    params: [
                        FunctionParam {
                            public: false,
                            name: Identifier {
                                name: "value",
                                span: 25..30,
                            },
                            ty: Named {
                                name: [
                                    Identifier {
                                        name: "Option",
                                        span: 32..38,
                                    },
                                ],
                                generics: [
                                    Named {
                                        name: [
                                            Identifier {
                                                name: "i64",
                                                span: 39..42,
                                            },
                                        ],
                                        generics: [],
                                    },
                                ],
                            },
                        },
                    ],
                    return_type: Some(
                        Named {
                            name: [
                                Identifier {
                                    name: "i64",
                                    span: 48..51,
                                },
                            ],
                            generics: [],
                        },
                    ),
                    body: Block {
                        statements: [
                            Spanned {
                                node: VariableDeclaration {
                                    public: false,
                                    mutable: false,
                                    pattern: Tuple {
                                        name: [
                                            Identifier {
                                                name: "Option",
                                                span: 62..68,
                                            },
                                            Identifier {
                                                name: "Some",
                                                span: 70..74,
                                            },
                                        ],
                                        fields: [
                                            Name(
                                                [
                                                    Identifier {
                                                        name: "inner",
                                                        span: 75..80,
                                                    },
                                                ],
                                            ),
                                        ],
                                    },
                                    ty: None,
                                    value: Spanned {
                                        node: ScopedName(
                                            [
                                                Identifier {
                                                    name: "value",
                                                    span: 84..89,
                                                },
                                            ],
                                        ),
                                        span: 84..90,
                                    },
                                    else_branch: Some(
                                        Block {
                                            statements: [
                                                Spanned {
                                                    node: Return(
                                                        Some(
                                                            Spanned {
                                                                node: Literal(
                                                                    Integer(
                                                                        IntegerLiteral {
                                                                            digits: "0",
                                                                            radix: Decimal,
                                                                        },
                                                                    ),
                                                                ),
                                                                span: 112..113,
                                                            },
                                                        ),
                                                    ),
                                                    span: 105..119,
                                                },
                                            ],
                                            tail_expression: None,
                                            span: 95..120,
                                        },
                                    ),
                                },
                                span: 58..126,
                            },
                        ],
                        tail_expression: Some(
                            Spanned {
                                node: ScopedName(
                                    [
                                        Identifier {
                                            name: "inner",
                                            span: 126..131,
                                        },
                                    ],
                                ),
                                span: 126..132,
                            },
                        ),
                        span: 52..134,
                    },
                },
            ),
            span: 0..134,
        },
    ],
}

==== Inference trace ====
T-Fn: unwrap_or_zero => i64
  T-Let: {unwrap_or_zero: fn(value: Option<i64>) -> i64, value: Option<i64>} ⊢ let Option::Some(inner) = value else {
    return 0;
}; ⇒ Option<i64>
    T-Var: {unwrap_or_zero: fn(value: Option<i64>) -> i64, value: Option<i64>} ⊢ value ⇒ Option<i64>
    T-Return: {unwrap_or_zero: fn(value: Option<i64>) -> i64, value: Option<i64>} ⊢ return 0; ⇒ i64
      T-Int: {unwrap_or_zero: fn(value: Option<i64>) -> i64, value: Option<i64>} ⊢ 0 ⇒ i64
      Unify-Var: i64 ~ i64 => {i64/t3}
    Unify-Enum: Option<i64> ~ Option => {i64/t0}
      Unify-Var: i64 ~ t0 => {i64/t0}
  T-ReturnTail: inner => i64
    T-Var: {inner: i64, unwrap_or_zero: fn(value: Option<i64>) -> i64, value: Option<i64>} ⊢ inner ⇒ i64
    Unify-Const: i64 ~ i64 => {}

==== Typed AST ====
TypedProgram {
    definitions: [
        Function(
            TypedFunctionDef {
                export: Some(
                    Script,
                ),
                name: Identifier {
                    name: "unwrap_or_zero",
                    span: 10..24,
                },
                id: NameId(4),
                ty: FunctionType {
                    kind: Normal,
                    name_span: 10..24,
                    params: [
                        TypedFunctionParam {
                            public: false,
                            name: Identifier {
                                name: "value",
                                span: 25..30,
                            },
                            ty: Enum(
                                EnumType {
                                    name: Identifier {
                                        name: "Option",
                                        span: 0..0,
                                    },
                                    variants: [
                                        EnumVariantType {
                                            name: Identifier {
                                                name: "None",
                                                span: 0..0,
                                            },
                                            kind: Unit,
                                        },
                                        EnumVariantType {
                                            name: Identifier {
                                                name: "Some",
                                                span: 0..0,
                                            },
                                            kind: Tuple(
                                                [
                                                    Int(
                                                        I64,
                                                    ),
                                                ],
                                            ),
                                        },
                                    ],
                                    type_args: [
                                        Int(
                                            I64,
                                        ),
                                    ],
                                },
                            ),
                            ty_span: 32..38,
                        },
                    ],
                    result: Int(
                        I64,
                    ),
                    callee: Some(
                        Named(
                            NameId(4),
                        ),
                    ),
                },
                body: TypedBlock {
                    statements: [
                        VariableDeclaration {
                            public: false,
                            mutable: false,
                            pattern: Tuple {
                                name: [
                                    Identifier {
                                        name: "Option",
                                        span: 62..68,
                                    },
                                    Identifier {
                                        name: "Some",
                                        span: 70..74,
                                    },
                                ],
                                fields: [
                                    Binding(
                                        Identifier {
                                            name: "inner",
                                            span: 75..80,
                                        },
                                    ),
                                ],
                            },
                            value: Spanned {
                                node: TypedExpr {
                                    ty: Enum(
                                        EnumType {
                                            name: Identifier {
                                                name: "Option",
                                                span: 0..0,
                                            },
                                            variants: [
                                                EnumVariantType {
                                                    name: Identifier {
                                                        name: "None",
                                                        span: 0..0,
                                                    },
                                                    kind: Unit,
                                                },
                                                EnumVariantType {
                                                    name: Identifier {
                                                        name: "Some",
                                                        span: 0..0,
                                                    },
                                                    kind: Tuple(
                                                        [
                                                            Int(
                                                                I64,
                                                            ),
                                                        ],
                                                    ),
                                                },
                                            ],
                                            type_args: [
                                                Int(
                                                    I64,
                                                ),
                                            ],
                                        },
                                    ),
                                    kind: ScopedName {
                                        name: [
                                            Identifier {
                                                name: "value",
                                                span: 84..89,
                                            },
                                        ],
                                        constant: None,
                                    },
                                },
                                span: 84..90,
                            },
                            else_branch: Some(
                                TypedBlock {
                                    statements: [
                                        Return(
                                            Some(
                                                Spanned {
                                                    node: TypedExpr {
                                                        ty: Int(
                                                            I64,
                                                        ),
                                                        kind: Literal(
                                                            Integer(
                                                                IntegerLiteral {
                                                                    digits: "0",
                                                                    radix: Decimal,
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    span: 112..113,
                                                },
                                            ),
                                        ),
                                    ],
                                    tail_expression: None,
                                },
                            ),
                        },
                    ],
                    tail_expression: Some(
                        Spanned {
                            node: TypedExpr {
                                ty: Int(
                                    I64,
                                ),
                                kind: ScopedName {
                                    name: [
                                        Identifier {
                                            name: "inner",
                                            span: 126..131,
                                        },
                                    ],
                                    constant: None,
                                },
                            },
                            span: 126..132,
                        },
                    ),
                },
            },
        ),
    ],
}

==== Core WebAssembly ====
(module
  (type (;0;) (func (param i32)))
  (type (;1;) (func (param i32 i64 i64 i64 i64) (result i32)))
  (type (;2;) (func (param i32 i64) (result i64)))
  (import "starstream:std/builtin" "[resource-drop]utxo" (func (;0;) (type 0)))
  (import "starstream:std/builtin" "[method]utxo.has-method" (func (;1;) (type 1)))
  (import "starstream:std/builtin" "[resource-drop]token" (func (;2;) (type 0)))
  (export "unwrap-or-zero" (func 3))
  (func (;3;) (type 2) (param i32 i64) (result i64)
    (local i32 i64 i64 i64)
    (block ;; label = @1
      (local.set 2
        (local.get 0)
        (local.set 3
          (local.get 1)))
      (br_if 0 (;@1;)
        (i32.eq
          (local.get 2)
          (i32.const 1)))
      (return
        (i64.const 0)))
    (local.set 5
      (local.get 3))
    (local.set 4
      (local.get 5))
    (local.get 4)
  )
  (@custom "component-type"
    (component
      (@custom "wit-component-encoding" "\04\00")
      (type (;0;)
        (component
          (type (;0;)
            (component
              (type (;0;)
                (instance
                  (export (;0;) "utxo" (type (sub resource)))
                  (type (;1;) (borrow 0))
                  (type (;2;) (own 0))
                  (type (;3;) (tuple u64 u64 u64 u64))
                  (type (;4;) (func (param "self" 1) (param "hash" 3) (result bool)))
                  (export (;0;) "[method]utxo.has-method" (func (type 4)))
                  (export (;5;) "token" (type (sub resource)))
                  (type (;6;) (borrow 5))
                  (type (;7;) (own 5))
                )
              )
              (import "starstream:std/builtin" (instance (;0;) (type 0)))
              (alias export 0 "utxo" (type (;1;)))
              (import "s-utxo" (type (;2;) (eq 1)))
              (type (;3;) (borrow 2))
              (type (;4;) (own 2))
              (alias export 0 "token" (type (;5;)))
              (import "s-token" (type (;6;) (eq 5)))
              (type (;7;) (borrow 6))
              (type (;8;) (own 6))
              (type (;9;) (option s64))
              (type (;10;) (func (param "value" 9) (result s64)))
              (export (;0;) "unwrap-or-zero" (func (type 10)))
            )
          )
          (export (;0;) "my-namespace:my-package/my-world" (component (type 0)))
        )
      )
      (export (;1;) "x" (type 0))
    )
  )
)

==== WIT ====
package root:component;

world root {
  import starstream:std/builtin;
  use starstream:std/builtin.{utxo as s-utxo, token as s-token};

  export unwrap-or-zero: func(value: option<s64>) -> s64;
}
package starstream:std {
  interface builtin {
    resource utxo {
      has-method: func(hash: tuple<u64, u64, u64, u64>) -> bool;
    }

    resource token;
  }
}
